--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "scripts": {
-    "dev": "sls deploy --stage local"
+    "dev": "sls deploy --stage local",
+    "test": "jest --rootDir=./ --config jest.config.js"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.83",
     "@types/dotenv-safe": "^8.1.2",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
     "@types/serverless": "^1.78.35",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
@@ -16,13 +17,15 @@
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^27.0.6",
+    "jest": "^27.2.4",
+    "jest-mock-extended": "^2.0.4",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "serverless": "^2.59.0",
     "serverless-localstack": "^0.4.34",
     "serverless-offline": "^8.2.0",
     "serverless-plugin-typescript": "^2.0.0",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.1.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
@@ -32,7 +35,6 @@
     "aws-sdk": "^2.996.0",
     "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
-    "node-xlsx": "^0.17.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0",
     "uuid": "^8.3.2",
